Added base imports

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend API of ordering food written in Node.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "start":"nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/TeaTalkInternal/food_geek_backend/issues"
   },
-  "homepage": "https://github.com/TeaTalkInternal/food_geek_backend#readme"
+  "homepage": "https://github.com/TeaTalkInternal/food_geek_backend#readme",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
